fix navigation menu on small screen

--- a/sass/components/navigation.scss
+++ b/sass/components/navigation.scss
@@ -62,6 +62,20 @@
     &:hover {
       background-color: oklch(from var(--primary) l c h / 0.8);
     }
+
+    &>span {
+      display: block;
+    }
+  }
+
+  &>span {
+    display: none;
+  }
+
+  @include sm {
+    &>span {
+      display: block;
+    }
   }
 }
 
